--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.6.0",
+    "lucide-react": "^0.562.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
