--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "reactflow": "^11.11.4",
+    "supabase": "^2.72.4",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
