--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "supa": "supabase"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@supabase/supabase-js": "^2.90.1",
     "axios": "^1.13.2",
     "lucide-react": "^0.562.0",
